--- a/channels.html
+++ b/channels.html
@@ -8,6 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
+        <nav>
+                <span id="app-name">#stacker</span>
+                <section>
+                    <span><a href="profile.html">Profile</a></span>
+                    <span><a href="login.html">Logout</a></span>
+                </section>
+        </nav>
         <aside>
             <h2>Sebastien</h2>
             <h1>Channels</h1>
@@ -16,15 +23,7 @@
             <h2>Movies</h2>
             <h2>Pets</h2>
         </aside>
-		<section class="main-section">
-			<header></header>
-			<nav>
-                <span>#stacker</span>
-                <section>
-                    <span id="app-name"><a href="profile.html" />Profile</a></span>
-                    <span><a href="login.html" />Logout</a></span>
-                </section>
-            </nav>			
+		<section class="main-section">			
 			<section id="messages-list">
 
 			</section>
