--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,13 @@
     <link href="css/profile.css" rel="stylesheet" />
   </head>
   <body>
+      <nav>
+          <span id="app-name">#stacker</span>
+          <section>
+              <span><a href="channels.html">Channels</a></span>
+              <span><a href="login.html">Logout</a></span>
+          </section>
+      </nav>		
       <aside>
         <img src="https://us.123rf.com/450wm/vastard/vastard1810/vastard181000049/110400735-fox-logo-vector-icon-illustration.jpg?ver=6" alt="" />
       </aside>
