--- a/channels.html
+++ b/channels.html
@@ -34,5 +34,5 @@
 			</footer>
 		</section>
 	</body>
-    <script src="scripts/messages-demo.js"></script>
+    <script src="scripts/messages.js"></script>
 </html>
