Added changes to login.css and added ID for submit button

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           <form action="profile.html" method="GET">
             <input type="text" placeholder="username">
             <input type="password" placeholder="password">
-            <input type="submit" value="Login">
+            <input type="submit" id="userSubmit" value="Login">
           </form>
       </main>
     </section>
